@@ -1,0 +1,45 @@
+#!/bin/sh
+# Copyright (C) 2010 Stefano Lattarini <stefano.lattarini@gmail.com>.
+# This file is part of the Ratfor Testsuite.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+# Check that incorrect (and only incorrect) usages of "break N" in
+# nested loops are caught.
+
+. ../lib/rat4-testsuite-init.sh || exit 99
+
+data="$srcdir/break-next-nested-fail.data"
+
+test -f "$data" || testcase_HARDERROR "data file \`$data' not found"
+test -r "$data" || testcase_HARDERROR "data file \`$data' not readable"
+
+# Do NOT use `<"$data"' in the two commands below, or a bug in the combo
+# "MirBSD Korn Shell" + "GNU C Library" will be triggered.
+$SED -e 's/ *#.*$//' -e 's/KWORD/break/g' "$data" >tst.r
+$AWK '/# *ERR/{ print "tst.r:" NR ": illegal break." }' "$data" >exp
+
+cat tst.r
+
+run_RATFOR -e 1 tst.r || testcase_FAIL
+mv stderr got
+
+cat exp
+cat got
+
+$DIFF_U exp got || testcase_FAIL
+
+testcase_DONE
+
+# vim: ft=sh ts=4 sw=4 et
