@@ -2,6 +2,8 @@ List of user-visible changes of Ratfor Testsuite.
 
 New in XXX
 -----------
+ * Extended tests on `break' and `next' keywords, esp. by checking that
+   they work as advised when the optional integer argument is present.
  * Added tests checking that nested "for", "while" and "switch" statements
    work.
  * Added tests checking that ratfor comments are not terminated by
